# financial-planner

./: .env.example  .gitignore  CLAUDE.md  README.md  SUPABASE_SETUP.md  account.py  auth.py  database.py  financial-planner.py  financial_planner.py  inputs.py  inputs_page.py  models.py  projection.py  pyproject.toml  results.py  scenario_manager.py  schema.sql  state.py  validation.py
inputs/: assets.py  income.py
