[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "financial-planner"
version = "0.1.0"
description = "UK Financial Planning Tool"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "anjor"},
]
requires-python = ">=3.13"
dependencies = [
    "pandas==2.2.2",
    "plotly==5.22.0",
    "streamlit==1.36.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py313"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[project.scripts]
financial-planner = "financial_planner:main"